--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/listr": "0.14.3",
     "@types/node": "15.6.0",
     "prettier": "2.3.0",
+    "type-fest": "1.2.0",
     "typescript": "4.2.4"
   },
   "dependencies": {
